--- a/proposed_project.Rmd
+++ b/proposed_project.Rmd
@@ -34,6 +34,7 @@ I will use the following packages to create the plot. The tidyverse package is a
 library(tidyverse)
 library(ncdf4)
 library(sf)
+library(raster)
 
 # knitr options
 knitr::opts_chunk$set(fig.width = 8, fig.height = 6)
@@ -47,6 +48,7 @@ Opening connection to Palmer Drought Index (PDI) file from Colorado.
 ```{r pdi_nc}
 # open drought index nc conncection
 di_nc <- nc_open("./data/pdi_colorado.nc")
+di_nc
 ```
 
 Wrangling PDI from 3-D array to a 2-D matrix.
@@ -78,14 +80,14 @@ colnames(coords) <- c("lon", "lat")
 group <- 1:9
 # group
 pdsi_df <- data.frame(group, coords, pdsi_mat) 
-glimpse(pdsi_df)
+
 # date for plotting
 date_col <- as.data.frame(seq(as.Date("1980-01-01"), as.Date("2014-12-01"),
                         by = "month")) 
 
 # make temp matrix and take mean for state
 co_di <- pdsi_df %>% 
-  select(-lon, -lat) %>% 
+  dplyr::select(-lon, -lat) %>% 
   gather(key = date, value = pdi, -group) %>% 
   mutate(pdi_invert = -(pdi),
     Date = as.Date(gsub("X", "", gsub("\\.","-", date)))) %>%
@@ -126,10 +128,6 @@ co_fires <- wildfire %>%
   filter(Duplicate_ == 0) %>% 
   mutate(Date = lubridate::floor_date(STARTDATED, unit = "months"))
 
-# extract lat lonts
-fire_coords <- data.frame(st_coordinates(co_fires)) %>% 
-  rename("lon"=X, "lat"=Y) 
-
 # join in with co fires
 co_fire_summary <- co_fires %>% 
   bind_cols(fire_coords) %>% 
@@ -157,6 +155,133 @@ ggplot(co_fire_summary, aes(x=Date, y = n_fires)) +
   ggtitle("Colorado 1980-2014: Number of Wildfires") +
   theme_minimal()
 ```
+
+## Preliminary Predictive Model
+
+I want to build a predictive model to model the probability of a large fire event >1000 acres for a given area based on drought index, temperature, precipitation. I think population density should also be accounted for, but I'm not sure if it should go in a model.
+
+First, I need to regrid the nc drought raster to find out the group ID each fire is in. I'm going to create a new raster of the drought index for just Colorado. 
+
+```{r group_raster}
+# define extent of colorado
+e <- extent(c(-110,-102.5, 35, 42.5))
+# empty 3x3 raster
+r <- raster(e, nrow=3, ncol=3)
+# rasterize group id and coordinates of pdi and assign each cell the group/region id
+pdi_r <- rasterize(pdsi_df[,2:3], r, pdsi_df[,1], fun=mean)
+```
+
+### Output of Large Fires
+
+```{r large_fire_events}
+# summary of fires
+fire_size_summary <- co_fires %>% 
+  group_by(SIZECLASS) %>% 
+  summarise(n = n(),mean_acre = mean(TOTALACRES), sd_acres = sd(TOTALACRES),
+            min_acres = min(TOTALACRES), max_acres = max(TOTALACRES))
+# remove geometry
+st_geometry(fire_size_summary) <- NULL
+# print fire summary
+fire_size_summary
+```
+
+For efficiency purposes, I'm going to limit only to fires that burned over 1000 acres. So fires of size F and G classification.
+
+```{r big_fires}
+# subset to large fire events
+big_fire_events <- co_fires %>% filter(SIZECLASS %in% c("F", "G"))
+```
+
+Finding where each fire occured in the PDI region based on location and extracting the group value form the raster where the fire coordinates lie.
+
+```{r extreact fire coords}
+# extract fire coords
+fire_coords <- st_coordinates(big_fire_events) 
+# assign group id to fire locations dataframe
+big_fire_events$group <- as.character(extract(pdi_r, fire_coords)) 
+# create outcome variable
+big_fire_events <- big_fire_events %>% 
+  mutate(outcome = 1)
+```
+
+Plot to check fire events by regional group.
+
+```{r fire_location_plot}
+ggplot(big_fire_events, aes(x=DLONGITUDE, y=DLATITUDE,
+                            group = group, color = group, fill=group)) +
+  geom_point() +
+  ggtitle("Fire location/region check") +
+  theme_minimal()
+```
+
+Setting up time series of fire and drought index.
+
+```{r fire_drought_index}
+drought_fires <- pdsi_df %>% 
+  dplyr::select(-lon, -lat) %>% 
+  gather(key = date, value = pdi, -group) %>% 
+  mutate(pdi_invert = -(pdi),
+    Date = as.Date(gsub("X", "", gsub("\\.","-", date))),
+    group = as.character(group),
+    month = lubridate::month(Date),
+    month_fct = factor(months(Date), levels = c("January", "February", "March", 
+      "April", "May", "June", "July", "August", "September", "October", 
+      "November", "December")),
+    season = as.factor(case_when(month %in% c(12,1,2) ~ "winter",
+                       month %in% 3:5 ~ "spring",
+                       month %in% 6:8 ~ "summer",
+                       month %in% 9:11 ~ "fall"))) %>% 
+  dplyr::select(-date) %>% 
+  left_join(big_fire_events, by = c("group", "Date")) %>% 
+  mutate(outcome = ifelse(is.na(outcome), 0, outcome))
+```
+
+Checking the relationship of drought index and propotion of fires by bins of inverted pdi and observed fire events.
+
+```{r bin_pdi}
+pdi_bin <- drought_fires %>% 
+  mutate(pdi_bin = cut(pdi_invert, breaks = seq(-8, 8))) %>% 
+  group_by(pdi_bin, group) %>% 
+  summarise(n_fires = sum(outcome), n = n(), pr_fires_bin = n_fires/n)
+
+
+# 408 months in time period
+ggplot(pdi_bin, aes(x=pdi_bin, y = pr_fires_bin, group=group, color = group)) +
+  geom_point() +
+  theme_minimal()
+```
+
+
+Simple logistic model accounting for within area..
+
+```{r simple_mixed_glm}
+# mixed model
+logit_mod <- lme4::glmer(outcome ~ pdi_invert + (1|group), 
+                         family = binomial(), data = drought_fires)
+
+# likelihood
+summary(logit_mod)
+```
+
+Plot of predicted response by region
+
+```{r predicted response}
+drought_fires$pr <- predict(logit_mod, type = "response")
+
+# new drought index
+pdi_invert <- rep(seq(-7, 7, by = 0.5), times=9)
+group <- rep(as.factor(seq(1:9)), each = 29)
+
+new_pr_data <- data.frame(pdi_invert, group)
+summary(drought_fires$pdi_invert)
+new_pr_data$new_pr <- predict(logit_mod, type = "response", newdata = new_pr_data)
+
+# plot of predicted response by region
+ggplot(new_pr_data, aes(x=pdi_invert, y=new_pr, group=group, color = group)) +
+  geom_point() +
+  theme_minimal()
+```
+
 
 ## Conclusion
 
